Bug 99329 - Sum Function Missing from Bottom of Calc
Summary: Sum Function Missing from Bottom of Calc
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: All All
: medium minor
Assignee: Dennis Francis
URL:
Whiteboard: target:5.2.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2016-04-15 15:53 UTC by Joel Madero
Modified: 2016-10-25 19:03 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Joel Madero 2016-04-15 15:53:22 UTC
Bodhi Moksha
LibreOffice Version: 5.2.0.0.alpha0+
Build ID: c7f40218cacdeafbeeaca7e91ce2621b0cd6158f
CPU Threads: 2; OS Version: Linux 3.16; UI Render: default; 
Locale: en-US (en_US.UTF-8)

++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
1. Open calc;
2. Type 1,2,3 in A1, A2, A3 respectively
3. Highlight A1:A3
4. Look at bottom of calc

Expected: Up until recently the sum showed up at the bottom. I've talked to moggi and he said it's not by design that it's gone now.

Probably this commit caused the problem: https://cgit.freedesktop.org/libreoffice/core/commit/?id=7bc97db5b972f27693161beb9182f8a5850f5551
Comment 1 Joel Madero 2016-04-15 15:54:24 UTC
@Dennis - pretty sure it broke because of this commit. Going to try to revert locally now to verify. Can you take a look at it?
Comment 2 Dennis Francis 2016-04-15 16:53:22 UTC
Thanks for catching this. 
Reproducible on a default user profile. I am working on a fix.
Comment 3 Joel Madero 2016-04-15 16:55:37 UTC
Awesome thank you!

Just as a side question - would it be relatively easy to add to it the main things people are generally interested in:

sum (already there)
avg (not there but I think many use avg function often);
median (maybe)

Just curious, obviously this goes above and beyond what the bug report is about so ignoring is entirely understandable :)
Comment 4 Dennis Francis 2016-04-15 18:53:48 UTC
I have submitted a prelim patch at https://gerrit.libreoffice.org/#/c/24118/
for review. In that it has sum and avg as the default statusbar functions.
Comment 5 Commit Notification 2016-04-19 16:53:06 UTC
Dennis Francis committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=219d1f3385907f8bb375b626b0a35f8239fa1550

tdf#99329 : By default show sum and average statusbar functions...

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Dennis Francis 2016-04-20 01:56:13 UTC
@Joel : Do we want to close this bug as resolved or wait till
the follow up patch to fix the performance problem Eike mentioned in gerrit ?

Thanks.
Comment 7 Joel Madero 2016-04-20 01:58:26 UTC
Eike needs to make that call. Personally I think that's a separate bug and I'd love to actually see what kind of performance issues....maybe in a few weeks when I have a little more time I'll try to make a really complicated spreadsheet to see what kind of performance issues we see.

Personally I think for 95% of users, they'll never notice a performance issue because they use spreadsheets in pretty basic ways and it's nice having those two functions shown immediately on the bottom.

@Eike - thoughts? New bug? Keep this one open?

@Dennis - you interested in dealing with the performance issue?

Thanks for taking care of this!
Comment 8 Dennis Francis 2016-04-20 04:44:59 UTC
(In reply to Joel Madero from comment #7)

> 
> @Dennis - you interested in dealing with the performance issue?
> 

I'll try to work on it coming weekend. Thanks.
Comment 9 Markus Mohrhard 2016-05-17 00:54:02 UTC
Let us close the bug. At least the original problem seems to be fixed.