tdf#99329 : By default show sum and average statusbar functions...

and correctly handle the non-default profiles from <= 5.1.*.

Change-Id: If230364a81774e43836956eb38fb8257ddf176b2